# social-research-probe

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  SKILL.md  config.toml.example  install.sh  pyproject.toml  requirements-dev.txt  requirements.txt  runtests.sh  uninstall.sh
.githooks/: pre-push
.github/workflows/: ci.yml  release.yml
SocialResearchProbe/references/: apply-pending.md  discard-pending.md  show-pending.md  show-purposes.md  update-purposes.md  update-topics.md
docs/: MODEL_APPLICABILITY.md  README.md  adding-a-platform.md  adding-a-service.md  adding-a-technology.md  api-costs-and-keys.md  architecture.md  charts.md  classifying.md  commands.md  configuration.md  corroboration.md  cost-optimization.md  data-directory.md  design-patterns.md  how-it-works.md  installation.md  llm-reliability-harness.md  llm-runners.md  model-applicability.md  module-reference.md  objective.md  project-structure.md  python-language-guide-2.md  python-language-guide.md  root-files.md  runtime-dependencies.md  scoring.md  security.md  statistics.md  summary-quality-report.md  synthesis-authoring.md  testing.md  usage.md
references/: discard-pending.md  run-research.md  show-pending.md  show-purposes.md  show-topics.md  suggest-purposes.md  suggest-topics.md  update-topics.md
scripts/: eval_llm_quality.py  eval_summary_quality.py  record_golden.py  tag_release.sh
skill/: SKILL.md
skill/references/: run-research.md  suggest-topics.md
social_research_probe/: __init__.py  __main__.py  cli.py  config.py  config.toml.example  dedupe.py  errors.py  packet.py  pipeline.py  types.py
social_research_probe/cli/: __init__.py  __main__.py  commands.py  dsl.py  dsl_parser.py  handlers.py  parsers.py  utils.py
social_research_probe/commands/: __init__.py  _demo_constants.py  _demo_fixtures.py  _demo_items.py  apply_pending.py  claims.py  compare.py  config.py  corroborate_claims.py  db.py  demo.py  discard_pending.py  install_skill.py  nl_query.py  notify.py  parse.py  purposes.py  render.py  report.py  research.py  schedule.py  serve_report.py  setup.py  show_pending.py  show_purposes.py  show_topics.py  stage_suggestions.py  suggest_purposes.py  suggest_topics.py  suggestions.py  topics.py  update_purposes.py  update_topics.py  watch.py
social_research_probe/corroboration/: __init__.py  _filters.py  _secret_utils.py  base.py  brave.py  exa.py  gemini_search.py  host.py  llm_cli.py  llm_search.py  registry.py  tavily.py
social_research_probe/evals/: __init__.py  harness.py  judge.py  metrics.py  report.py
social_research_probe/llm/: __init__.py  base.py  ensemble.py  gemini_cli.py  host.py  prompts.py  registry.py  schemas.py
social_research_probe/pipeline/: __init__.py  charts.py  corroboration.py  enrichment.py  orchestrator.py  scoring.py  stages.py  stats.py  svs.py
social_research_probe/platform/: __init__.py  base.py  youtube.py
social_research_probe/purposes/: merge.py  registry.py
social_research_probe/render/: __init__.py  _assets.py  _sections.py  html.py  markdown_to_html.py
social_research_probe/scoring/: __init__.py  combine.py  opportunity.py  trend.py  trust.py
social_research_probe/services/: __init__.py  base.py
social_research_probe/skill/: SKILL.md
social_research_probe/state/: migrate.py  schemas.py  store.py  validate.py
tests/: conftest.py  record_golden.py
tests/evals/: __init__.py  (+6 more)
(+731 files in other folders)
