[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "social-research-probe"
version = "0.1.0"
description = "Evidence-first social-media research CLI + Claude Code skill"
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "jsonschema>=4.0",
    "rapidfuzz>=3.0",
    "google-api-python-client>=2.0",
    "yt-dlp>=2024.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.0",
    "ruff>=0.6",
]

[project.scripts]
srp = "social_research_probe.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["social_research_probe"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
pythonpath = ["."]

[tool.coverage.run]
source = ["social_research_probe"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = [".", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["N802"]
