[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "VERSION"
pattern = "^(?P<version>.+)$"

[project]
name = "social-research-probe"
dynamic = ["version"]

description = "Evidence-first social-media research CLI + Claude Code skill"
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "jsonschema>=4.0",
    "rapidfuzz>=3.0",
    "google-api-python-client>=2.0",
    "yt-dlp>=2024.0",
    "youtube-transcript-api>=0.6.3",
    "matplotlib>=3.8",
    "openai-whisper>=20231117",
    "httpx>=0.28.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "hypothesis>=6.0",
    "ruff>=0.6",
    "respx>=0.23",
    "vulture>=2.0",
]

[project.scripts]
srp = "social_research_probe.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["social_research_probe"]

[tool.hatch.build.targets.wheel.shared-data]
"social_research_probe/skill/SKILL.md" = "share/social-research-probe/SKILL.md"
"social_research_probe/skill/references" = "share/social-research-probe/references"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --cov=social_research_probe --cov-branch --cov-fail-under=100"
pythonpath = ["."]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["social_research_probe"]
branch = true
omit = ["social_research_probe/cli/__main__.py"]

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "^\\s*\\.\\.\\.$",
    "@abstractmethod",
    "emit_packet\\(",
    "except ImportError:",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = [".", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["N802"]
"social_research_probe/llm/__init__.py" = ["F401"]
"social_research_probe/llm/runners/__init__.py" = ["F401"]
"social_research_probe/platforms/__init__.py" = ["F401"]

[dependency-groups]
dev = [
    "pytest-asyncio>=0.23",
    "respx>=0.23.1",
    "vulture>=2.16",
]
